small naming refactor for Domain.Entities add  add endpoint for ProgrammingLanguage entity

--- a/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
+++ b/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
@@ -14,6 +16,16 @@
   <ItemGroup>
     <ProjectReference Include="..\..\core\Core.Persistence\Core.Persistence.csproj" />
     <ProjectReference Include="..\kodlama.io.Devs.Domain\kodlama.io.Devs.Domain.csproj" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  
+  <ItemGroup>
+    <Folder Include="Features\ProgrammingLanguages\Models\" />
+    <Folder Include="Features\ProgrammingLanguages\Queries\" />
+    <Folder Include="Features\ProgrammingLanguages\Rules\" />
+    <Folder Include="Features\ProgrammingLanguages\Contants\" />
   </ItemGroup>
 
 </Project>
