--- a/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
+++ b/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
@@ -14,6 +14,7 @@
 
   
   <ItemGroup>
+    <ProjectReference Include="..\..\core\Core.Application\Core.Application.csproj" />
     <ProjectReference Include="..\..\core\Core.CrossCuttingConcers\Core.CrossCuttingConcerns.csproj" />
     <ProjectReference Include="..\..\core\Core.Persistence\Core.Persistence.csproj" />
     <ProjectReference Include="..\kodlama.io.Devs.Domain\kodlama.io.Devs.Domain.csproj" />
@@ -23,7 +24,6 @@
 
   
   <ItemGroup>
-    <Folder Include="Features\ProgrammingLanguages\Models\" />
     <Folder Include="Features\ProgrammingLanguages\Contants\" />
   </ItemGroup>
 
