--- a/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
+++ b/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
@@ -25,13 +25,7 @@
   
   <ItemGroup>
     <Folder Include="Features\ProgrammingLanguages\Contants\" />
-    <Folder Include="Features\Technology\Dtos\" />
-    <Folder Include="Features\Technology\Queries\" />
-    <Folder Include="Features\Technology\Mapping\" />
-    <Folder Include="Features\Technology\Rules\" />
-    <Folder Include="Features\Technology\Models\" />
-    <Folder Include="Features\Technology\Commands\" />
-    <Folder Include="Features\Technology\Contants\" />
+    <Folder Include="Features\Technologies\Contants\" />
   </ItemGroup>
 
 </Project>
