--- a/src/kodlama.io.Devs/kodlama.io.Devs.WebAPI/appsettings.json
+++ b/src/kodlama.io.Devs/kodlama.io.Devs.WebAPI/appsettings.json
@@ -1,12 +1,20 @@
-{
+{"TokenOptions": {
+    "Audience": "14arslan.yusuf@gmail.com",
+    "Issuer": "14yusuf.arslan@gmail.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "iliketomoveitiliketomoveitiliketomoveit"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "ConnectionStrings": {
     "DevsHubConnectionString": "Server=DESKTOP-90TN0CG\\SQLEXPRESS;Database=DevsHub;Trusted_Connection=True;"
   },
+
+  
   "AllowedHosts": "*"
 }
