--- a/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
+++ b/src/kodlama.io.Devs/kodlama.io.Devs.Application/kodlama.io.Devs.Application.csproj
@@ -28,6 +28,9 @@
     <Folder Include="Features\DeveloperUsers\Models\" />
     <Folder Include="Features\DeveloperUsers\Queries\" />
     <Folder Include="Features\DeveloperUsers\Dtos\" />
+    <Folder Include="Features\GithubProfiles\Contants\" />
+    <Folder Include="Features\GithubProfiles\Models\" />
+    <Folder Include="Features\GithubProfiles\Queries\" />
     <Folder Include="Features\ProgrammingLanguages\Contants\" />
     <Folder Include="Features\Technologies\Contants\" />
   </ItemGroup>
