created login endpoint

--- a/src/kodlama.io.Devs/kodlama.io.Devs.WebAPI/appsettings.json
+++ b/src/kodlama.io.Devs/kodlama.io.Devs.WebAPI/appsettings.json
@@ -1,4 +1,5 @@
-{"TokenOptions": {
+{
+  "TokenOptions": {
     "Audience": "14arslan.yusuf@gmail.com",
     "Issuer": "14yusuf.arslan@gmail.com",
     "AccessTokenExpiration": 10,
@@ -15,6 +16,6 @@
     "DevsHubConnectionString": "Server=DESKTOP-90TN0CG\\SQLEXPRESS;Database=DevsHub;Trusted_Connection=True;"
   },
 
-  
+
   "AllowedHosts": "*"
 }
